<resources>
    <string name="app_name">掌动山威</string>
    <string name="app_name_eng">hand_shanwei</string>
    <string name="book_tomorrow_seat">预约明天座位</string>
    <string name="order_time">预约日期</string>
    <string name="select_floor">选择楼层</string>
    <string name="login">登录</string>
    <string name="log_out">退出登录</string>
    <string name="floor_info_cap">共</string>
    <string name="floor_info_cur">余</string>
    <string name="book_seats_title">座位预约</string>
    <string name="search_book_title">查找书籍</string>
    <string name="config_center_title">个人中心</string>
	<string name="order_fail">预约失败</string>
    <string name="order_success">预约成功</string>
    <string name="bookseathometip">提示:点击相应楼层进入精确预约界面\n想要更快预约到座位可以选择一键预约哦</string>
    <string name="order_empty_tip">预约失败，再试一下吧</string>
    <string name="order_hashistory_tip">您已存在有效的预约记录，\n不能再次预约，请到个人中心查看</string>
    <string name="ordering">正在预约....</string>
    <string name="order_connection_out_tip">链接超时，请重试</string>
    <string name="search_hint">输入书名或作者名</string>
    <string name="searchtwice">二次搜索</string>
    <string name="cancel">取消</string>
    <string name="twicesearchtip">在搜索框中输入内容，进行二次搜索</string>
    <string name="twicesearch">二次搜索</string>
    <string name="book_searchmode_global">全局搜索</string>
    <string name="book_searchmode_secondary">二次搜索</string>
    <string name="book_unit">本</string>
    <string name="secondary_search_hint">提示:按返回键重新搜索</string>
    <string name="book_name">书名</string>
    <string name="book_author">作者</string>
    <string name="current_order">当前预约</string>
    <string name="time">时间</string>
    <string name="position">位置</string>
    <string name="recycler_update_footer">点击下载下一页</string>
    <string name="load_complete">加载完成</string>
    <string name="loading">正在加载</string>
    <string name="search_book_result_head_text">搜索结果</string>
    <string name="key_word">关键词</string>
</resources>
