<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">
   <LinearLayout
       android:layout_width="fill_parent"
       android:orientation="horizontal"
       android:paddingLeft="10dp"
       android:paddingRight="10dp"
       android:layout_height="wrap_content">
       <SearchView
           android:paddingLeft="10dp"
           android:layout_width="0dp"
           android:queryHint="@string/searchtwice"
           android:layout_weight="5"
           android:layout_height="wrap_content">
       </SearchView>
       <Button
           android:layout_width="0dp"
            android:id="@+id/btncanceltwice"
           android:layout_weight="1"
           android:layout_height="fill_parent"
           android:text="@string/cancel"/>

   </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:textSize="16sp"
            android:text="@string/twicesearchtip"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1.8"
            android:text="@string/twicesearch"
            android:layout_height="wrap_content"
            android:id="@+id/btntwicesearch"/>
    </LinearLayout>
    <ListView
        android:layout_width="fill_parent"
        android:id="@+id/bookresultlistview"
        android:layout_height="wrap_content"

        >
    </ListView>
</LinearLayout>