<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
   <LinearLayout
       android:layout_width="0dp"
       android:layout_weight="4"
       android:orientation="vertical"
       android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="fill_parent"
           android:orientation="horizontal"
           android:layout_height="fill_parent">
           <TextView
               android:layout_marginLeft="10dp"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="fill_parent"
               android:text="@string/time"
               android:textSize="20sp"
               />
           <TextView
               android:layout_width="0dp"
               android:layout_weight="3"
               android:text="2015-11-20"
               android:textSize="20sp"
               android:id="@+id/tvordertime"
               android:layout_height="fill_parent" />
       </LinearLayout>
       <LinearLayout
           android:layout_width="fill_parent"
           android:orientation="horizontal"
           android:layout_height="fill_parent">
           <TextView
               android:layout_marginLeft="10dp"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="fill_parent"
               android:text="@string/position"
               android:textSize="20sp"
               />
           <TextView
               android:layout_width="0dp"
               android:layout_weight="3"
               android:text="3楼001座"
               android:textSize="20sp"
               android:id="@+id/tvorderposition"
               android:layout_height="fill_parent" />
       </LinearLayout>
   </LinearLayout>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel_order"
        android:layout_weight="1"/>

    </LinearLayout>
