<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00cfff">
        <TextView
            android:layout_width="fill_parent"
             android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/book_seats_title"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/btnback"
            android:background="@drawable/back"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/order_time"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="0000-00-00"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:id="@+id/tvordertime"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/select_floor"
            android:textSize="20sp"
            android:textAlignment="center"
            />
     <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="2"
         android:layout_height="wrap_content"
         android:paddingRight="80dp">
         <Spinner
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/spinner"
             android:popupBackground="#00cfff"
             >
         </Spinner>
     </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <GridView
            android:layout_width="match_parent"
            android:id="@+id/gridview_seats"
            android:numColumns="4"
            android:visibility="gone"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
        </GridView>
        <TextView
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:textColor="#ff0000"
            android:layout_marginBottom="100dp"
            android:id="@+id/noselectFloortv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="选择不限楼层，系统将随机为您\n预约座位，实现一键预约"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:layout_width="100dp"
            android:textSize="15sp"
            android:id="@+id/btn_order_seats"
            android:layout_height="wrap_content"
            android:background="@color/my"
            android:text="预约"/>
    </LinearLayout>
</LinearLayout>